--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         - "8080:80"
         volumes:
             - ./code:/code
-            - ./site.conf:/etc/nginx/conf.d/default.conf
+            - ./site.conf:/etc/nginx/conf.d/site.conf
         links:
             - php
     php:
